--- a/SeazonProject/src/main/resources/templates/mypage.html
+++ b/SeazonProject/src/main/resources/templates/mypage.html
@@ -36,7 +36,7 @@
             <!-- </form> -->
             <br>
             <button type="button" class="btn btn-light">개인정보 수정</button>
-            <button type="button" class="btn btn-light">내 레시피 관리</button>
+            <button type="button" class="btn btn-light">내 여행 관리</button>
             <button type="button" class="btn btn-light">요리 후기</button>
             <button type="button" class="btn btn-light">댓글</button>
          </div>
@@ -45,7 +45,7 @@
       <!-- 상세 페이지 -->
       <div style="border: 1px solid red; float: left; width: 70%">
 
-         <div class="css-signup-main">개인정보 수정</div>
+         <div class="css-travel-main">개인정보 수정</div>
 
          <form th:action="@{/mypage}" th:object="${userModifyForm}"
             method="post">
