--- a/SeazonProject/src/main/resources/templates/navbar.html
+++ b/SeazonProject/src/main/resources/templates/navbar.html
@@ -23,12 +23,17 @@
         </li>
       </ul>
 
-      <form class="d-flex ms-auto" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+    <form class="d-flex ms-auto me-4" role="search">
+  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+  <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+      
+        <div class="d-flex ms-auto">
+        <a href="/user/login" class="btn btn-light me-2">로그인</a>
+        <a href="/user/signup" class="btn btn-outline-light">회원가입</a>
+      </div>
+</div>
 
     </div>
 
-  </div>
 </nav>
