--- a/SeazonProject/src/main/resources/templates/travel_detail.html
+++ b/SeazonProject/src/main/resources/templates/travel_detail.html
@@ -1,10 +1,10 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
 
-   <!-- 레시피 제목-->
-   <h2 class="border-bottom py-2" th:text="${signUp.subject}"></h2>
+   <!-- 여행 제목-->
+   <h2 class="border-bottom py-2" th:text="${travel.subject}"></h2>
    
-   <!-- 레시피 -->
+   <!-- 여행 -->
       <div class="card my-3">
         <div class="card-head" align="center" style="margin-top:50px">
         
@@ -12,51 +12,51 @@
             
             <!-- 요리 썸네일 -->
             <tr>
-             <td rowspan="5" style="width: 600px"><img th:src="${signUp.filePath}" class="img-thumbnail" style="width: 600px; height: 400px;">
+             <td rowspan="5" style="width: 600px"><img th:src="${travel.filePath}" class="img-thumbnail" style="width: 600px; height: 400px;">
              
-                <!-- 레시피 추천 버튼 -->
+                <!-- 여행 추천 버튼 -->
                   <div align="center" style="margin-top:10px" >
                      <a class="recommend btn btn-sm btn-outline-danger"
-                            th:data-uri="@{|/signUp/vote/${signUp.id}|}">추천
-                            <span class="badge rounded-pill bg-danger" th:text="${#lists.size(signUp.voter)}"></span>
+                            th:data-uri="@{|/travel/vote/${travel.id}|}">추천
+                            <span class="badge rounded-pill bg-danger" th:text="${#lists.size(travel.voter)}"></span>
                      </a>
                   
                 <!-- 질문 수정 버튼 -->
-                       <a th:href="@{|/signUp/modify/${signUp.id}|}" class="btn btn-sm btn-outline-warning"
-                        sec:authorize="isAuthenticated()" th:if="${signUp.author != null and #authentication.getPrincipal().getUsername() == signUp.author.username}"
+                       <a th:href="@{|/travel/modify/${travel.id}|}" class="btn btn-sm btn-outline-warning"
+                        sec:authorize="isAuthenticated()" th:if="${travel.author != null and #authentication.getPrincipal().getUsername() == travel.author.username}"
                          th:text="수정"></a>
                         
                 <!-- 질문 삭제 버튼 -->      
-                     <a th:data-uri="@{|/signUp/delete/${signUp.id}|}" class="delete btn btn-sm btn-outline-warning"
-                        sec:authorize="isAuthenticated()" th:if="${signUp.author != null and #authentication.getPrincipal().getUsername() == signUp.author.username}"
+                     <a th:data-uri="@{|/travel/delete/${travel.id}|}" class="delete btn btn-sm btn-outline-warning"
+                        sec:authorize="isAuthenticated()" th:if="${travel.author != null and #authentication.getPrincipal().getUsername() == travel.author.username}"
                         th:text="삭제"></a>
                 </div>
              </td>
              
             <!-- 요리 작성자 -->
                <td><div class="border-bottom py-2 float-end">
-             <span th:if="${signUp.author != null}" th:text="${signUp.author.nickname}"  style="vertical-align: bottom"></span>
+             <span th:if="${travel.author != null}" th:text="${travel.author.nickname}"  style="vertical-align: bottom"></span>
              <img th:src="${profilePath}" class="rounded" width=80px" height=80px"> 
                   </div></td>
             </tr>
             
             <!-- 요리제목 -->
             <tr>
-               <td><h3><span style="margin-left:30px" th:text="${signUp.subject}"></span></h3></td>
+               <td><h3><span style="margin-left:30px" th:text="${travel.subject}"></span></h3></td>
             </tr>
             
             <!-- 요리소개 -->
             <tr>
-               <td><div style="color:gray; margin-left:30px" th:text="${signUp.cookIntro}"></div></td></tr>
+               <td><div style="color:gray; margin-left:30px" th:text="${travel.travelIntro}"></div></td></tr>
               
               <!-- 요리 재료 -->
              <tr>
              <td>   
               <h5><span style="margin-left: 30px;">재료 <small class="text-muted">Ingredients</small></span></h5> 
-              <h6><th:block th:each="ingredient, index : ${#strings.arraySplit(signUp.ingredient, ',')}">
+              <h6><th:block th:each="ingredient, index : ${#strings.arraySplit(travel.ingredient, ',')}">
                   <span th:text="${ingredient}" style="margin-left: 30px; text-align: left; display: inline-block; width: 30%;"></span>
                   <span th:text="' '"></span>
-                  <span th:text="${#strings.arraySplit(signUp.capacity, ',')[__${index.index}__]}" style="text-align: right; display: inline-block; width: 30%;"></span>
+                  <span th:text="${#strings.arraySplit(travel.capacity, ',')[__${index.index}__]}" style="text-align: right; display: inline-block; width: 30%;"></span>
                   <br/></h6>
               </th:block></td>
       </tr>
@@ -64,39 +64,39 @@
             
             <!-- 최초 작성 일시       
             <div class="badge bg-light text-dark p-2 text-start">
-               <div th:text="${#temporals.format(signUp.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+               <div th:text="${#temporals.format(travel.createDate, 'yyyy-MM-dd HH:mm')}"></div>
             </div> -->
             
              <!-- 수정 일시 
-             <div th:if="${signUp.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
+             <div th:if="${travel.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
                     <div class="mb-2">수정됨</div>
-                    <div th:text="${#temporals.format(signUp.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                    <div th:text="${#temporals.format(travel.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
              </div> -->
         
                   
-         <!-- 레시피 내용 -->         
+         <!-- 여행 내용 -->         
          <table class="table table-bordered" style="width: 1000px; margin-top:100px;">
            <tr class="text-center">
            <!-- 요리 정보(인원/시간/난이도) -->
              <td><img src="/image/people.jpg" style="width:40px; height:40px;">
-                <div th:text="${signUp.cookInfo_people}"></div></td>
+                <div th:text="${travel.cookInfo_people}"></div></td>
              <td><img src="/image/time.jpg" style="width:40px; height:40px;">
-                <div th:text="${signUp.cookInfo_time}"></div></td>
+                <div th:text="${travel.cookInfo_time}"></div></td>
              <td><img src="/image/level.jpg" style="width:40px; height:40px;">
-                <div th:text="${signUp.cookInfo_level}"></div></td>
+                <div th:text="${travel.cookInfo_level}"></div></td>
             </tr>
         </table>
            
           <!-- 마크다운 적용 -->
-          <!-- 요리 레시피 -->
+          <!-- 요리 여행 -->
       <table class="table" style="width: 1000px;">
       <h5 class="text-start" style="margin-top:100px; margin-left:150px;">조리순서 <small class="text-muted">Steps</small></h5>
       
-      <th:block th:each="content, index : ${#strings.arraySplit(signUp.content, ',')}">
+      <th:block th:each="content, index : ${#strings.arraySplit(travel.content, ',')}">
       
          <tr>
               <td rowspan='2' style="width: 400px; height: 400px; border-bottom: none;" >
-                 <img th:src="${signUp.contentFilePath}" class="img-thumbnail" style="width: 400px; height: 400px; margin-bottom:100px"></td>
+                 <img th:src="${travel.contentFilePath}" class="img-thumbnail" style="width: 400px; height: 400px; margin-bottom:100px"></td>
               <td style="height:50px"><span th:text="'Step ' + (${index.index + 1})" 
                               style="font-size: 20px; font-weight: bold; margin-left:20px"></span></td>
            </tr>
@@ -109,14 +109,14 @@
            <div class="d-flex justify-content-end">
                   
                   <!-- 수정 일시 -->
-                  <div th:if="${signUp.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
+                  <div th:if="${travel.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
                          <div class="mb-2">수정됨</div>
-                         <div th:text="${#temporals.format(signUp.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                         <div th:text="${#temporals.format(travel.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
                      </div>
                          
                   <!-- 최초 작성 일시 -->      
                   <div class="badge bg-light text-dark p-2 text-start">
-                     <div th:text="${#temporals.format(signUp.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                     <div th:text="${#temporals.format(travel.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                   </div>
                </div>
                
@@ -124,13 +124,13 @@
                <div class="my-3">
                   
                   <!-- 질문 수정 버튼 -->
-                      <a th:href="@{|/signUp/modify/${signUp.id}|}" class="btn btn-sm btn-outline-warning"
-                        sec:authorize="isAuthenticated()" th:if="${signUp.author != null and #authentication.getPrincipal().getUsername() == signUp.author.username}"
+                      <a th:href="@{|/travel/modify/${travel.id}|}" class="btn btn-sm btn-outline-warning"
+                        sec:authorize="isAuthenticated()" th:if="${travel.author != null and #authentication.getPrincipal().getUsername() == travel.author.username}"
                          th:text="수정"></a>
                            
                   <!-- 질문 삭제 버튼 -->      
-                  <a th:data-uri="@{|/signUp/delete/${signUp.id}|}" class="delete btn btn-sm btn-outline-warning"
-                     sec:authorize="isAuthenticated()" th:if="${signUp.author != null and #authentication.getPrincipal().getUsername() == signUp.author.username}"
+                  <a th:data-uri="@{|/travel/delete/${travel.id}|}" class="delete btn btn-sm btn-outline-warning"
+                     sec:authorize="isAuthenticated()" th:if="${travel.author != null and #authentication.getPrincipal().getUsername() == travel.author.username}"
                      th:text="삭제"></a>
                </div>
          </div>
@@ -138,10 +138,10 @@
       
     <!-- 답변 -->
    <!-- 답변의 갯수 표시 -->
-   <h5 class="border-bottom my-3 py-2" th:text="|${#lists.size(signUp.answerList)}개의 답변이 있습니다.|"></h5>
+   <h5 class="border-bottom my-3 py-2" th:text="|${#lists.size(travel.answerList)}개의 답변이 있습니다.|"></h5>
          
    <!-- 답변 반복 시작 -->
-   <div class="card my-3" th:each="answer : ${signUp.answerList}">
+   <div class="card my-3" th:each="answer : ${travel.answerList}">
    
       <!-- 답변 앵커 추가 -->
       <a th:id="|answer_${answer.id}|"></a>
@@ -190,7 +190,7 @@
    <!-- 답변 반복 끝  -->
       
    <!-- 답변 작성 -->
-   <form th:action="@{|/answer/create/${signUp.id}|}" th:object="${answerForm}" method="post" class="my-3">
+   <form th:action="@{|/answer/create/${travel.id}|}" th:object="${answerForm}" method="post" class="my-3">
       <div th:replace="form_errors :: formErrorsFragment"></div>
          <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" class="form-control" rows="10"></textarea>
          <textarea sec:authorize="isAuthenticated()" th:field="*{content}" class="form-control" rows="10"></textarea>
