--- a/SeazonProject/src/main/resources/templates/travel_detail.html
+++ b/SeazonProject/src/main/resources/templates/travel_detail.html
@@ -79,11 +79,11 @@
            <tr class="text-center">
            <!-- 요리 정보(인원/시간/난이도) -->
              <td><img src="/image/people.jpg" style="width:40px; height:40px;">
-                <div th:text="${travel.cookInfo_people}"></div></td>
+                <div th:text="${travel.travelInfo_people}"></div></td>
              <td><img src="/image/time.jpg" style="width:40px; height:40px;">
-                <div th:text="${travel.cookInfo_time}"></div></td>
+                <div th:text="${travel.travelInfo_time}"></div></td>
              <td><img src="/image/level.jpg" style="width:40px; height:40px;">
-                <div th:text="${travel.cookInfo_level}"></div></td>
+                <div th:text="${travel.travelInfo_level}"></div></td>
             </tr>
         </table>
            
