--- a/SeazonProject/src/main/resources/templates/festivalList.html
+++ b/SeazonProject/src/main/resources/templates/festivalList.html
@@ -135,7 +135,7 @@
             <div class="col-md-auto">
                 <button id="searchButton" class="btn btn-orange">검색</button>
             </div>
-            <div class="col-md-auto">
+            <div class="col-md-auto"  sec:authorize="authentication.name == 'wcadmin'">
               <button type="button" class="btn btn-orange" onclick="location.href='/travel/create'">등록</button>
             </div>
 
